--- a/05-TeamsMessagingExtension/manifest/manifest.template.json
+++ b/05-TeamsMessagingExtension/manifest/manifest.template.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.8/MicrosoftTeams.schema.json",
   "manifestVersion": "1.8",
-  "version": "1.1.2",
+  "version": "1.1.5",
   "id": "<TEAMS_APP_ID>",
   "packageName": "io.github.officedev.teamsappcamp1.northwind",
   "developer": {
@@ -29,9 +29,7 @@
       "name": "My Orders",
       "contentUrl": "https://<HOSTNAME>/pages/myOrders.html",
       "websiteUrl": "https://<HOSTNAME>/pages/myOrders.html",
-      "scopes": [
-        "personal"
-      ]
+      "scopes": ["personal"]
     },
     {
       "entityId": "Products",
@@ -39,10 +37,19 @@
       "contentUrl": "https://<HOSTNAME>/pages/categories.html",
       "websiteUrl": "https://<HOSTNAME>/pages/categories.html",
       "scopes": [
-        "personal","team"
+        "personal"
       ]
     }
   ],
+  "configurableTabs": [
+    {
+        "configurationUrl": "https://<HOSTNAME>/pages/tabConfig.html",
+        "canUpdateConfiguration": true,
+        "scopes": [
+            "team",
+            "groupchat"
+        ]
+    }],
   "showLoadingIndicator": false,
   "composeExtensions": [
     {
@@ -77,7 +84,6 @@
       "messageTeamMembers"
   ],
   "validDomains": [
-      "<HOSTNAME>",
-      "*.ngrok.io "
+      "<HOSTNAME>"
   ]
 }
