--- a/05-TeamsMessagingExtension/package.json
+++ b/05-TeamsMessagingExtension/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server/server.js",    
+    "start": "nodemon server/server.js",
     "debug": "nodemon --inspect server/server.js",
     "package": "node manifest/makePackage.js"
   },
@@ -13,9 +13,12 @@
   "author": "M365 cloud advocates",
   "license": "MIT",
   "dependencies": {
+    "adaptivecards": "^2.10.0",
+    "adaptivecards-templating": "^2.2.0",
     "botbuilder": "^4.15.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "node-fetch": "^3.1.0",
     "request": "^2.88.0"
   },
