added stock unit property to card

--- a/05-TeamsMessagingExtension/manifest/manifest.template.json
+++ b/05-TeamsMessagingExtension/manifest/manifest.template.json
@@ -79,11 +79,20 @@
       ]
     }
   ],
+  "bots": [
+    {
+      "botId": "<MicrosoftAppId>",
+      "scopes": [ "personal", "team", "groupchat" ],
+      "isNotificationOnly": false,
+      "supportsFiles": false
+    }
+  ],
   "permissions": [
       "identity",
       "messageTeamMembers"
   ],
   "validDomains": [
-      "<HOSTNAME>"
+      "<HOSTNAME>",
+      "token.botframework.com"
   ]
 }
