--- a/05-AddMessagingExtension/manifest/manifest.template.json
+++ b/05-AddMessagingExtension/manifest/manifest.template.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.8/MicrosoftTeams.schema.json",
   "manifestVersion": "1.8",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "id": "<TEAMS_APP_ID>",
   "packageName": "io.github.officedev.teamsappcamp1.northwind",
   "developer": {
@@ -23,13 +23,25 @@
     "full": "Simple app to demonstrate porting a SaaS app to Microsoft Teams"
   },
   "accentColor": "#FFFFFF",
-  "staticTabs": [
+  "configurableTabs": [
+    {
+        "configurationUrl": "https://<HOSTNAME>/pages/tabConfig.html",
+        "canUpdateConfiguration": true,
+        "scopes": [
+            "team",
+            "groupchat"
+        ]
+    }
+],
+"staticTabs": [
     {
       "entityId": "Orders",
       "name": "My Orders",
       "contentUrl": "https://<HOSTNAME>/pages/myOrders.html",
       "websiteUrl": "https://<HOSTNAME>/pages/myOrders.html",
-      "scopes": ["personal"]
+      "scopes": [
+        "personal"
+      ]
     },
     {
       "entityId": "Products",
@@ -41,15 +53,6 @@
       ]
     }
   ],
-  "configurableTabs": [
-    {
-        "configurationUrl": "https://<HOSTNAME>/pages/tabConfig.html",
-        "canUpdateConfiguration": true,
-        "scopes": [
-            "team",
-            "groupchat"
-        ]
-    }],
   "showLoadingIndicator": false,
   "composeExtensions": [
     {
@@ -92,7 +95,10 @@
       "messageTeamMembers"
   ],
   "validDomains": [
-      "<HOSTNAME>",
-      "token.botframework.com"
-  ]
+      "<HOSTNAME>"
+  ],
+  "webApplicationInfo": {
+      "id": "<CLIENT_ID>",
+      "resource": "api://<HOSTNAME>/<CLIENT_ID>"
+  }
 }
